Reload off files and add new bet houses to dataset

--- a/BetsExploring2018/Notes/2_filesAnalysis-raw_to_correct.ipynb
+++ b/BetsExploring2018/Notes/2_filesAnalysis-raw_to_correct.ipynb
@@ -161,46 +161,81 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>Segunda</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>2012-2013</td>\n",
+       "      <th>32</th>\n",
+       "      <td>Conference</td>\n",
+       "      <td>England</td>\n",
+       "      <td>2007-2008</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>LeChampionnat</td>\n",
-       "      <td>France</td>\n",
-       "      <td>2018-2019</td>\n",
+       "      <th>67</th>\n",
+       "      <td>League2</td>\n",
+       "      <td>England</td>\n",
+       "      <td>2015-2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>Division3</td>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>2009-2010</td>\n",
+       "      <th>182</th>\n",
+       "      <td>SerieB</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2015-2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>230</th>\n",
+       "      <th>85</th>\n",
        "      <td>Division2</td>\n",
-       "      <td>Scotland</td>\n",
+       "      <td>France</td>\n",
        "      <td>2004-2005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>Division1</td>\n",
+       "      <th>181</th>\n",
+       "      <td>SerieB</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>2014-2015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>League1</td>\n",
+       "      <td>England</td>\n",
+       "      <td>2017-2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Premier</td>\n",
        "      <td>Scotland</td>\n",
-       "      <td>2010-2011</td>\n",
+       "      <td>2011-2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>Primera</td>\n",
+       "      <td>Spain</td>\n",
+       "      <td>2005-2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>EthnikiKatigoria</td>\n",
+       "      <td>Greece</td>\n",
+       "      <td>2012-2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>Division2</td>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>2009-2010</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       competition   country     season\n",
-       "294        Segunda     Spain  2012-2013\n",
-       "113  LeChampionnat    France  2018-2019\n",
-       "249      Division3  Scotland  2009-2010\n",
-       "230      Division2  Scotland  2004-2005\n",
-       "220      Division1  Scotland  2010-2011"
+       "          competition   country     season\n",
+       "32         Conference   England  2007-2008\n",
+       "67            League2   England  2015-2016\n",
+       "182            SerieB     Italy  2015-2016\n",
+       "85          Division2    France  2004-2005\n",
+       "181            SerieB     Italy  2014-2015\n",
+       "55            League1   England  2017-2018\n",
+       "265           Premier  Scotland  2011-2012\n",
+       "274           Primera     Spain  2005-2006\n",
+       "151  EthnikiKatigoria    Greece  2012-2013\n",
+       "235         Division2  Scotland  2009-2010"
       ]
      },
      "metadata": {},
@@ -209,7 +244,7 @@
    ],
    "source": [
     "dsfiles = pd.DataFrame(season_list)\n",
-    "display (dsfiles.sample(5))"
+    "display (dsfiles.sample(10))"
    ]
   },
   {
@@ -260,7 +295,7 @@
        "      <th>top</th>\n",
        "      <td>Division2</td>\n",
        "      <td>England</td>\n",
-       "      <td>2009-2010</td>\n",
+       "      <td>2012-2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -276,7 +311,7 @@
        "       competition  country     season\n",
        "count          316      316        316\n",
        "unique          19       11         16\n",
-       "top      Division2  England  2009-2010\n",
+       "top      Division2  England  2012-2013\n",
        "freq            30       70         22"
       ]
      },
@@ -419,7 +454,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>HTR</td>\n",
+       "      <td>WHA</td>\n",
        "      <td>Premier</td>\n",
        "      <td>England</td>\n",
        "    </tr>\n",
@@ -437,7 +472,7 @@
        "       column competition  country\n",
        "count    1232        1232     1232\n",
        "unique    119          19       11\n",
-       "top       HTR     Premier  England\n",
+       "top       WHA     Premier  England\n",
        "freq       22         136      329"
       ]
      },
@@ -691,55 +726,55 @@
      "text": [
       "Number of variables:  119\n",
       "Columns with information for allmost all files (country + competition):\n",
-      "HTR         22\n",
-      "IWD         22\n",
-      "IWH         22\n",
-      "SBD         22\n",
-      "FTHG        22\n",
-      "HTHG        22\n",
+      "WHA         22\n",
       "Div         22\n",
-      "HTAG        22\n",
-      "SBA         22\n",
+      "WHD         22\n",
       "IWA         22\n",
+      "SBA         22\n",
+      "FTR         22\n",
+      "SBD         22\n",
+      "IWH         22\n",
+      "HTR         22\n",
+      "HTAG        22\n",
+      "GBD         22\n",
+      "GBH         22\n",
+      "GBA         22\n",
       "SBH         22\n",
       "Date        22\n",
-      "FTR         22\n",
       "FTAG        22\n",
+      "HTHG        22\n",
       "WHH         22\n",
-      "WHD         22\n",
-      "GBH         22\n",
-      "GBD         22\n",
-      "GBA         22\n",
-      "WHA         22\n",
-      "AwayTeam    21\n",
-      "B365H       21\n",
-      "B365A       21\n",
-      "B365D       21\n",
+      "IWD         22\n",
+      "FTHG        22\n",
       "HomeTeam    21\n",
-      "LBH         20\n",
+      "B365A       21\n",
+      "B365H       21\n",
+      "AwayTeam    21\n",
+      "B365D       21\n",
       "LBA         20\n",
       "LBD         20\n",
-      "BWA         14\n",
+      "LBH         20\n",
       "BWD         14\n",
       "BWH         14\n",
-      "BbAvAHA     10\n",
-      "BbAv>2.5    10\n",
-      "SJA         10\n",
-      "BbAHh       10\n",
-      "BbMx<2.5    10\n",
-      "BbAvA       10\n",
-      "GBAHH       10\n",
-      "BbMx>2.5    10\n",
+      "BWA         14\n",
       "SJH         10\n",
-      "BbAvD       10\n",
-      "BbMxD       10\n",
-      "SJD         10\n",
+      "VCA         10\n",
       "BbOU        10\n",
+      "BbAH        10\n",
+      "BbMxH       10\n",
+      "GBAH        10\n",
       "VCD         10\n",
       "BbAvH       10\n",
+      "GB<2.5      10\n",
+      "BbAvA       10\n",
+      "BbMxA       10\n",
       "BbMxAHH     10\n",
-      "VCA         10\n",
-      "BbAv<2.5    10\n",
+      "SJD         10\n",
+      "BbAvAHA     10\n",
+      "BbAHh       10\n",
+      "BbMx<2.5    10\n",
+      "BbMx>2.5    10\n",
+      "BbAvAHH     10\n",
       "BbMxAHA     10\n",
       "Name: column, dtype: int64\n"
      ]
@@ -881,15 +916,15 @@
     {
      "data": {
       "text/plain": [
+       "WHH      22\n",
        "IWH      22\n",
        "SBH      22\n",
        "GBH      22\n",
-       "WHH      22\n",
        "B365H    21\n",
        "LBH      20\n",
        "BWH      14\n",
-       "SJH      10\n",
        "VCH      10\n",
+       "SJH      10\n",
        "SOH       5\n",
        "Name: column, dtype: int64"
       ]
@@ -1146,12 +1181,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column</th>\n",
+       "      <th>competition</th>\n",
+       "      <th>country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>B365H</td>\n",
+       "      <td>Liga1</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>B365H</td>\n",
+       "      <td>Premier</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719</th>\n",
+       "      <td>B365H</td>\n",
+       "      <td>SerieB</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>B365H</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>England</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>980</th>\n",
+       "      <td>B365H</td>\n",
+       "      <td>Division3</td>\n",
+       "      <td>Scotland</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    column competition   country\n",
+       "500  B365H       Liga1   Germany\n",
+       "333  B365H     Premier   England\n",
+       "719  B365H      SerieB     Italy\n",
+       "197  B365H     League1   England\n",
+       "980  B365H   Division3  Scotland"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dspotential_cols.head(5)"
+   ]
   },
   {
    "cell_type": "code",
