--- a/BetsExploring2018/Notes/3_filesUnifying-raw_to_correct.ipynb
+++ b/BetsExploring2018/Notes/3_filesUnifying-raw_to_correct.ipynb
@@ -53,12 +53,20 @@
    },
    "outputs": [],
    "source": [
-    "colsdest = [\"Country\", \"Competition\", \"Season\",\n",
-    "            \"Div\", \"Date\", \"HomeTeam\", \"AwayTeam\", \"FTR\",\n",
-    "            \"WHH\", \"WHD\", \"WHA\",\n",
-    "            \"SBH\",\"SBD\",\"SBA\",\n",
-    "            \"IWH\",\"IWD\",\"IWA\",\n",
-    "            \"GBH\",\"GBD\",\"GBA\"]      "
+    "colsdest = ['Country', 'Competition', 'Season',\n",
+    "            'Div', 'Date', 'HomeTeam', 'AwayTeam', 'FTR',\n",
+    "            'B365H','B365D','B365A',\n",
+    "            'BSH','BSD','BSA',\n",
+    "            'BWH','BWD','BWA',\n",
+    "            'GBH','GBD','GBA',\n",
+    "            'IWH','IWD','IWA',\n",
+    "            'LBH','LBD','LBA',\n",
+    "            'SOH','SOD','SOA',\n",
+    "            'SBH','SBD','SBA',\n",
+    "            'SJH','SJD','SJA',\n",
+    "            'SYH','SYD','SYA',\n",
+    "            'VCH','VCD','VCA',\n",
+    "            'WHH','WHD','WHA']      "
    ]
   },
   {
@@ -105,7 +113,8 @@
       "\u001b[31mIncorrect file format: ../Data/Raw/Main/Spain/Segunda/0304.csv\n",
       "\u001b[31mIncorrect file format: ../Data/Raw/Main/Spain/Segunda/0405.csv\n",
       "\u001b[31mIncorrect file format: ../Data/Raw/Main/Spain/Segunda/0708.csv\n",
-      "\u001b[31mIncorrect file format: ../Data/Raw/Main/Turkey/FutbolLigi1/0607.csv\n"
+      "\u001b[31mIncorrect file format: ../Data/Raw/Main/Turkey/FutbolLigi1/0607.csv\n",
+      "Unifying process finished\n"
      ]
     }
    ],
@@ -159,7 +168,9 @@
     "                    with open(pathtemp + filetemp, 'a') as output_file:\n",
     "                        ds_cols.to_csv(output_file, header=None, index=None)\n",
     "            except:\n",
-    "                print (Fore.RED + \"Incorrect file format: \" + url)"
+    "                print (Fore.RED + \"Incorrect file format: \" + url)\n",
+    "                \n",
+    "print (\"Unifying process finished\")"
    ]
   },
   {
@@ -171,8 +182,10 @@
      "data": {
       "text/plain": [
        "Index(['Country', 'Competition', 'Season', 'Div', 'Date', 'HomeTeam',\n",
-       "       'AwayTeam', 'FTR', 'WHH', 'WHD', 'WHA', 'SBH', 'SBD', 'SBA', 'IWH',\n",
-       "       'IWD', 'IWA', 'GBH', 'GBD', 'GBA'],\n",
+       "       'AwayTeam', 'FTR', 'B365H', 'B365D', 'B365A', 'BSH', 'BSD', 'BSA',\n",
+       "       'BWH', 'BWD', 'BWA', 'GBH', 'GBD', 'GBA', 'IWH', 'IWD', 'IWA', 'LBH',\n",
+       "       'LBD', 'LBA', 'SOH', 'SOD', 'SOA', 'SBH', 'SBD', 'SBA', 'SJH', 'SJD',\n",
+       "       'SJA', 'SYH', 'SYD', 'SYA', 'VCH', 'VCD', 'VCA', 'WHH', 'WHD', 'WHA'],\n",
        "      dtype='object')"
       ]
      },
@@ -183,6 +196,236 @@
    ],
    "source": [
     "ds_cols.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(144, 44)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_cols.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Competition</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Div</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>HomeTeam</th>\n",
+       "      <th>AwayTeam</th>\n",
+       "      <th>FTR</th>\n",
+       "      <th>B365H</th>\n",
+       "      <th>B365D</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SJA</th>\n",
+       "      <th>SYH</th>\n",
+       "      <th>SYD</th>\n",
+       "      <th>SYA</th>\n",
+       "      <th>VCH</th>\n",
+       "      <th>VCD</th>\n",
+       "      <th>VCA</th>\n",
+       "      <th>WHH</th>\n",
+       "      <th>WHD</th>\n",
+       "      <th>WHA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>FutbolLigi1</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>2018-10-08</td>\n",
+       "      <td>Ankaragucu</td>\n",
+       "      <td>Galatasaray</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>FutbolLigi1</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>2018-11-08</td>\n",
+       "      <td>Fenerbahce</td>\n",
+       "      <td>Bursaspor</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>FutbolLigi1</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>2018-11-08</td>\n",
+       "      <td>Rizespor</td>\n",
+       "      <td>Kasimpasa</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>FutbolLigi1</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>2018-11-08</td>\n",
+       "      <td>Sivasspor</td>\n",
+       "      <td>Alanyaspor</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>FutbolLigi1</td>\n",
+       "      <td>2018-2019</td>\n",
+       "      <td>T1</td>\n",
+       "      <td>2018-12-08</td>\n",
+       "      <td>Besiktas</td>\n",
+       "      <td>Akhisar Belediyespor</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 44 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country  Competition     Season Div       Date    HomeTeam  \\\n",
+       "0  Turkey  FutbolLigi1  2018-2019  T1 2018-10-08  Ankaragucu   \n",
+       "1  Turkey  FutbolLigi1  2018-2019  T1 2018-11-08  Fenerbahce   \n",
+       "2  Turkey  FutbolLigi1  2018-2019  T1 2018-11-08    Rizespor   \n",
+       "3  Turkey  FutbolLigi1  2018-2019  T1 2018-11-08   Sivasspor   \n",
+       "4  Turkey  FutbolLigi1  2018-2019  T1 2018-12-08    Besiktas   \n",
+       "\n",
+       "               AwayTeam FTR  B365H  B365D ...   SJA SYH SYD SYA   VCH   VCD  \\\n",
+       "0           Galatasaray   A   4.50   4.00 ...                    4.33  4.00   \n",
+       "1             Bursaspor   H   1.36   5.00 ...                    1.40  4.80   \n",
+       "2             Kasimpasa   A   2.30   3.40 ...                    2.38  3.40   \n",
+       "3            Alanyaspor   H   2.25   3.25 ...                    2.20  3.50   \n",
+       "4  Akhisar Belediyespor   H   1.40   5.00 ...                    1.40  4.75   \n",
+       "\n",
+       "    VCA   WHH   WHD  WHA  \n",
+       "0  1.73  4.00  4.00  1.7  \n",
+       "1  7.50  1.35  4.80  7.0  \n",
+       "2  2.88  2.30  3.50  2.7  \n",
+       "3  3.13  2.10  3.70  2.9  \n",
+       "4  7.00  1.40  4.75  6.0  \n",
+       "\n",
+       "[5 rows x 44 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Information from only last file\n",
+    "ds_cols.head(5)"
    ]
   },
   {
