--- a/BetsExploring2018/Notes/4_fieldsAnalysis-raw_to_correct.ipynb
+++ b/BetsExploring2018/Notes/4_fieldsAnalysis-raw_to_correct.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(105503, 20)"
+       "(106969, 44)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,19 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['Country', 'Competition', 'Season', 'Div', 'Date', 'HomeTeam',\n",
-       "       'AwayTeam', 'FTR', 'WHH', 'WHD', 'WHA', 'SBH', 'SBD', 'SBA', 'IWH',\n",
-       "       'IWD', 'IWA', 'GBH', 'GBD', 'GBA'],\n",
+       "       'AwayTeam', 'FTR', 'B365H', 'B365H.1', 'B365H.2', 'BSH', 'BSD', 'BSA',\n",
+       "       'BWH', 'BWD', 'BWA', 'GBH', 'GBD', 'GBA', 'IWH', 'IWD', 'IWA', 'LBH',\n",
+       "       'LBD', 'LBA', 'SOH', 'SOD', 'SOA', 'SBH', 'SBD', 'SBA', 'SJH', 'SJD',\n",
+       "       'SJA', 'SYH', 'SYD', 'SYA', 'VCH', 'VCD', 'VCA', 'WHH', 'WHD', 'WHA'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -128,164 +130,173 @@
        "      <th>HomeTeam</th>\n",
        "      <th>AwayTeam</th>\n",
        "      <th>FTR</th>\n",
+       "      <th>B365H</th>\n",
+       "      <th>B365H.1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SJA</th>\n",
+       "      <th>SYH</th>\n",
+       "      <th>SYD</th>\n",
+       "      <th>SYA</th>\n",
+       "      <th>VCH</th>\n",
+       "      <th>VCD</th>\n",
+       "      <th>VCA</th>\n",
        "      <th>WHH</th>\n",
        "      <th>WHD</th>\n",
        "      <th>WHA</th>\n",
-       "      <th>SBH</th>\n",
-       "      <th>SBD</th>\n",
-       "      <th>SBA</th>\n",
-       "      <th>IWH</th>\n",
-       "      <th>IWD</th>\n",
-       "      <th>IWA</th>\n",
-       "      <th>GBH</th>\n",
-       "      <th>GBD</th>\n",
-       "      <th>GBA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>91436</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Primera</td>\n",
-       "      <td>2007-2008</td>\n",
-       "      <td>SP1</td>\n",
-       "      <td>2008-01-26</td>\n",
-       "      <td>Sevilla</td>\n",
-       "      <td>Osasuna</td>\n",
-       "      <td>H</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>1.55</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>5.80</td>\n",
-       "      <td>1.55</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>6.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37705</th>\n",
-       "      <td>England</td>\n",
-       "      <td>Premier</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>E0</td>\n",
-       "      <td>2017-04-11</td>\n",
-       "      <td>Newcastle</td>\n",
-       "      <td>Bournemouth</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>4.0</td>\n",
+       "      <th>60819</th>\n",
+       "      <td>Greece</td>\n",
+       "      <td>EthnikiKatigoria</td>\n",
+       "      <td>2015-2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>4.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39961</th>\n",
-       "      <td>France</td>\n",
-       "      <td>Division2</td>\n",
-       "      <td>2009-2010</td>\n",
-       "      <td>F2</td>\n",
-       "      <td>2010-07-05</td>\n",
-       "      <td>Tours</td>\n",
-       "      <td>Bastia</td>\n",
-       "      <td>D</td>\n",
-       "      <td>1.91</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>3.10</td>\n",
-       "      <td>3.80</td>\n",
-       "      <td>1.95</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>3.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17675</th>\n",
-       "      <td>England</td>\n",
-       "      <td>Conference</td>\n",
-       "      <td>2017-2018</td>\n",
-       "      <td>EC</td>\n",
-       "      <td>2017-02-09</td>\n",
-       "      <td>Barrow</td>\n",
-       "      <td>Boreham Wood</td>\n",
-       "      <td>H</td>\n",
-       "      <td>2.25</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.20</td>\n",
-       "      <td>3.15</td>\n",
-       "      <td>2.85</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18691</th>\n",
+       "      <th>18913</th>\n",
        "      <td>England</td>\n",
        "      <td>League1</td>\n",
        "      <td>2005-2006</td>\n",
        "      <td>E2</td>\n",
-       "      <td>2006-04-02</td>\n",
-       "      <td>Brentford</td>\n",
-       "      <td>Walsall</td>\n",
+       "      <td>2006-01-17</td>\n",
+       "      <td>Colchester</td>\n",
+       "      <td>Bristol City</td>\n",
        "      <td>H</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.75</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19159</th>\n",
+       "      <td>England</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>2006-2007</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>2006-08-08</td>\n",
+       "      <td>Yeovil</td>\n",
+       "      <td>Bournemouth</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.90</td>\n",
        "      <td>3.20</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>4.70</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23569</th>\n",
+       "      <td>England</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>2014-2015</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>2014-08-16</td>\n",
+       "      <td>Crawley Town</td>\n",
+       "      <td>Swindon</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>3.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93232</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Primera</td>\n",
+       "      <td>2008-2009</td>\n",
+       "      <td>SP1</td>\n",
+       "      <td>2009-05-30</td>\n",
+       "      <td>La Coruna</td>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.33</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>3.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 44 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Country Competition     Season  Div       Date   HomeTeam  \\\n",
-       "91436    Spain     Primera  2007-2008  SP1 2008-01-26    Sevilla   \n",
-       "37705  England     Premier  2017-2018   E0 2017-04-11  Newcastle   \n",
-       "39961   France   Division2  2009-2010   F2 2010-07-05      Tours   \n",
-       "17675  England  Conference  2017-2018   EC 2017-02-09     Barrow   \n",
-       "18691  England     League1  2005-2006   E2 2006-04-02  Brentford   \n",
+       "       Country       Competition     Season  Div       Date      HomeTeam  \\\n",
+       "60819   Greece  EthnikiKatigoria  2015-2016  NaN        NaT           NaN   \n",
+       "18913  England           League1  2005-2006   E2 2006-01-17    Colchester   \n",
+       "19159  England           League1  2006-2007   E2 2006-08-08        Yeovil   \n",
+       "23569  England           League1  2014-2015   E2 2014-08-16  Crawley Town   \n",
+       "93232    Spain           Primera  2008-2009  SP1 2009-05-30     La Coruna   \n",
        "\n",
-       "           AwayTeam FTR   WHH  WHD  WHA  SBH  SBD  SBA   IWH   IWD   IWA  \\\n",
-       "91436       Osasuna   H  1.50  3.4  6.0  1.5  3.6  6.5  1.55  3.40  5.80   \n",
-       "37705   Bournemouth   A  2.00  3.4  4.0  NaN  NaN  NaN  1.90  3.50  4.10   \n",
-       "39961        Bastia   D  1.91  3.1  4.0  2.0  3.0  3.6  1.90  3.10  3.80   \n",
-       "17675  Boreham Wood   H  2.25  3.2  3.0  NaN  NaN  NaN  2.20  3.15  2.85   \n",
-       "18691       Walsall   H  1.70  3.2  4.5  1.7  3.4  4.5  1.75  3.20  4.00   \n",
+       "           AwayTeam  FTR  B365H  B365H.1 ...    SJA  SYH  SYD  SYA   VCH  \\\n",
+       "60819           NaN  NaN    NaN      NaN ...    NaN  NaN  NaN  NaN   NaN   \n",
+       "18913  Bristol City    H   1.72     1.72 ...   4.33  NaN  NaN  NaN  1.73   \n",
+       "19159   Bournemouth    D   1.90     1.90 ...   3.40  NaN  NaN  NaN  1.90   \n",
+       "23569       Swindon    H   2.38     2.38 ...   3.00  NaN  NaN  NaN  2.40   \n",
+       "93232     Barcelona    D   2.00     2.00 ...   3.33  NaN  NaN  NaN  2.00   \n",
        "\n",
-       "        GBH  GBD   GBA  \n",
-       "91436  1.55  3.6  6.00  \n",
-       "37705   NaN  NaN   NaN  \n",
-       "39961  1.95  3.1  3.75  \n",
-       "17675   NaN  NaN   NaN  \n",
-       "18691  1.70  3.3  4.70  "
+       "        VCD   VCA   WHH   WHD  WHA  \n",
+       "60819   NaN   NaN   NaN   NaN  NaN  \n",
+       "18913  3.25  4.35  1.72  3.25  4.2  \n",
+       "19159  3.25  3.50  1.90  3.20  3.5  \n",
+       "23569  3.40  3.20  2.40  3.10  3.1  \n",
+       "93232  3.40  3.20  2.10  3.60  3.2  \n",
+       "\n",
+       "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,22 +321,46 @@
        "HomeTeam               object\n",
        "AwayTeam               object\n",
        "FTR                    object\n",
-       "WHH                   float64\n",
-       "WHD                   float64\n",
-       "WHA                   float64\n",
-       "SBH                   float64\n",
-       "SBD                   float64\n",
-       "SBA                   float64\n",
-       "IWH                   float64\n",
-       "IWD                   float64\n",
-       "IWA                   float64\n",
+       "B365H                 float64\n",
+       "B365H.1               float64\n",
+       "B365H.2               float64\n",
+       "BSH                   float64\n",
+       "BSD                   float64\n",
+       "BSA                   float64\n",
+       "BWH                   float64\n",
+       "BWD                   float64\n",
+       "BWA                   float64\n",
        "GBH                   float64\n",
        "GBD                   float64\n",
        "GBA                   float64\n",
+       "IWH                   float64\n",
+       "IWD                   float64\n",
+       "IWA                   float64\n",
+       "LBH                   float64\n",
+       "LBD                   float64\n",
+       "LBA                   float64\n",
+       "SOH                   float64\n",
+       "SOD                   float64\n",
+       "SOA                   float64\n",
+       "SBH                   float64\n",
+       "SBD                   float64\n",
+       "SBA                   float64\n",
+       "SJH                   float64\n",
+       "SJD                   float64\n",
+       "SJA                   float64\n",
+       "SYH                   float64\n",
+       "SYD                   float64\n",
+       "SYA                   float64\n",
+       "VCH                   float64\n",
+       "VCD                   float64\n",
+       "VCA                   float64\n",
+       "WHH                   float64\n",
+       "WHD                   float64\n",
+       "WHA                   float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
