Schema of final project presentation

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -6,8 +6,14 @@
     "collapsed": true
    },
    "source": [
-    "# Big Data Project\n",
-    "## Preliminary Deliverable and Oral Presentation - Project Planning\n"
+    "# Big Data Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project overview"
    ]
   },
   {
@@ -493,8 +499,27 @@
     "\n",
     "In a individual match divergence it's a measure of the difference between Bet House Quotes.\n",
     "\n",
-    "We expect to define a function like this: **divergence(match)**\n",
-    "\n",
+    "We expect to define a function like this:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "1. Calculate Divergence(row)\n",
+    "2. Filter matches of this week. Optional we can filter also by country or competition\n",
+    "3. Map rows calculating divergence\n",
+    "4. Reduce result and obtain top N divergence values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We will use this function following these steps:\n",
     "\n",
     "1. Filter matches of this week. Optional we can filter also by country or competition\n",
@@ -519,7 +544,7 @@
     "\n",
     "label = 'FTR'\n",
     "\n",
-    "model = Model.trail(features, label)\n",
+    "model = Model.train(features, label)\n",
     "\n",
     "prediction = model.predict(features)\n",
     "\n",
@@ -634,6 +659,121 @@
     "\n",
     "Hardware production infrastructure must be provided by the client and depends on other technical providers.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# B. Technical Requirements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Solution Description & Diagram\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data Inputs\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Data Cleaning Steps\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Data Processing Steps\n",
+    "\n",
+    "### 4.1 Divergence\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Bet Houses Reliability\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Prediction of the mach result\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# C. Outcomes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Review Expected vs. Attained Outcomes\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Review Final Outcomes vs. Objectives\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Conclusions and Future Steps\n",
+    "\n",
+    "\n",
+    "\n",
+    "."
    ]
   },
   {
