--- a/BetsExploring2018/Notes/7_reliability_curiousBets.ipynb
+++ b/BetsExploring2018/Notes/7_reliability_curiousBets.ipynb
@@ -27,6 +27,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Group all the matches by the result and the set of all bethouses quotas\n",
+    "\"\"\"\n",
+    "\n",
     "def remove_duplicates(lst):\n",
     "    seen = set()\n",
     "    seen_add = seen.add\n",
@@ -67,6 +71,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Added a new column composed by the bean quotas \n",
+    "(mean quota for home win, mean quota for draw, mean quota for away win)\n",
+    "\"\"\"\n",
     "def bets_mean(bets):\n",
     "    total_bets = len(bets)\n",
     "    \n",
@@ -109,6 +117,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Taking into account the mean quotas, we set a curious ratio (1.25) and select, \n",
+    "for each possible result of the match those quotas above this ratio\n",
+    "\"\"\"\n",
+    "\n",
     "curious_ratio = 1.25\n",
     "\n",
     "def evaluate_bets_over_mean(line):\n",
@@ -147,6 +160,11 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "Taking into account the mean quotas, we set a curious ratio (1.25) and select, \n",
+    "for each possible result of the match those quotas below this ratio\n",
+    "\"\"\"\n",
+    "\n",
     "def evaluate_bets_under_mean(line):\n",
     "    curious_home_bets = []\n",
     "    curious_draw_bets = []\n",
@@ -183,6 +201,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "We select, for each match, the maximum quota for home win, draw and away win\n",
+    "\"\"\"\n",
+    "\n",
     "def maximum_bets(line):\n",
     "    home_maximum = (\"\", 0.0)\n",
     "    draw_maximum = (\"\", 0.0)\n",
@@ -218,6 +240,10 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "We select, for each match, the minimum quota for home win, draw and away win\n",
+    "\"\"\"\n",
+    "\n",
     "def minimum_bets(line):\n",
     "    home_minimum = (\"\", 99.0)\n",
     "    draw_minimum = (\"\", 99.0)\n",
@@ -258,6 +284,12 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "We calculate the hit ratio of each bet house. This is computed by checking if the FTR column (Final Time Result)\n",
+    "has the same value as the lowest quota of the bethouse for that match. The lowest qouta is considered the most \n",
+    "probable result.\n",
+    "\"\"\"\n",
+    "\n",
     "def bets_hit(line):\n",
     "    hit = []\n",
     "    \n",
