--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -722,7 +722,13 @@
     "### 4.2 Bet Houses Reliability\n",
     "\n",
     "\n",
-    "."
+    "To calculate the reliability of each bethouse, we take a look at all the historical of quotas. Then, for each match we take into account only two columns: __FTR__ (Final Time Result) and __the lowest quota of the bethouse for that match__. The lowest of the quotas is what the bethouse has considered the most probable result for that match. Then, the computation is trivial: if __FTR__ is equal to the lowest quota, means that the bethouse has hit the result, otherwhise, not. Then, we just devide the hits between the total number of bets of that bethouse to obtain his reliability.\n",
+    "\n",
+    "The reliability of our bethouses looks like this:\n",
+    "\n",
+    "<img src=\"../Img/reliability.png\">\n",
+    "\n",
+    "As the image shows, there is a high correlation between all the quotas of the bethouses as more or less they have the same hit ratio."
    ]
   },
   {
@@ -732,8 +738,41 @@
     "### 4.3 Prediction of the mach result\n",
     "\n",
     "\n",
+    "In order to predict the match result we have decided to use a classificator model based in __Naive Bayes__. We have been discussing to use some other kinds of models like __Linear Regression__, __Linear Regression with Stochastic Gradient Descent(SGD)__ or __Multinomial Logistic Regression__ but, we have discarded them because we are aiming for another type of outcome. What we want is to get for a match the probability of the three different possible results. \n",
     "\n",
-    "."
+    "For example, a desired outcome would be this one: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%)\n",
+    "\n",
+    "This kind of outcome can only be obtained by using a __Naive Bayes__ model.\n",
+    "\n",
+    "Finally, we have decided to create two different __Naive Bayes__ models. The first one, will be trained with all the bets historical and the second one, will be trained only with the bets from the current season (2018-2019).\n",
+    "We have taken this decision because we wanted to see if the model performance increases if we take some more concrete data. Also, may be interesting to create a model with only the quotas for one competition, country or team.\n",
+    "\n",
+    "To create this two models, we have just used the __FTR__ column as the __label__ and all the quotas from the bethouses as the __features__ vector.\n",
+    "\n",
+    "Finally, we have split the datasets in 90% for training and 10% for testing.\n",
+    "\n",
+    "The performance of our first model is the following:\n",
+    "\n",
+    "<img src=\"../Img/full_ds.png\">\n",
+    "<img src=\"../Img/full_th.png\">\n",
+    "<img src=\"../Img/full_hh.png\">\n",
+    "<img src=\"../Img/full_dh.png\">\n",
+    "<img src=\"../Img/full_ah.png\">\n",
+    "\n",
+    "\n",
+    "The performance of our second model is the following:\n",
+    "\n",
+    "<img src=\"../Img/partial_ds.png\">\n",
+    "<img src=\"../Img/partial_th.png\">\n",
+    "<img src=\"../Img/partial_hh.png\">\n",
+    "<img src=\"../Img/partial_dh.png\">\n",
+    "<img src=\"../Img/partial_ah.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "As it can be seen, in both cases the models seem to be struggling in the draw predictions. This is why their accuracy is only of more or less 50%.\n",
+    "\n",
+    "As we can see, if the data is more concrete, the performance increases."
    ]
   },
   {
@@ -749,9 +788,16 @@
    "source": [
     "## 1. Review Expected vs. Attained Outcomes\n",
     "\n",
+    "As we have explained, our goal was to obtain something like this: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%).\n",
     "\n",
+    "We know that a model based in __Naive Bayes__ offers this kind of output, but, we have not be able to achieve it yet.\n",
     "\n",
-    "."
+    "Right now, our model output is something like this: _\"The most probable result for this match is: __1__\"_\n",
+    "\n",
+    "We have codified the result so:\n",
+    "    1 : Home wins\n",
+    "    0 : Draw\n",
+    "   -1 : Away wins"
    ]
   },
   {
@@ -761,8 +807,11 @@
     "## 2. Review Final Outcomes vs. Objectives\n",
     "\n",
     "\n",
+    "The accuracy of our models right now is of more or less 50%.\n",
     "\n",
-    "."
+    "We expected to obtain the same prediction accuracy for all the three different results. But, as we have explained, the models seem to have problems to predict the draws so that is decreasing the final global accuracy.\n",
+    "\n",
+    "Note that if we achieve for the models to predict draws as good as they predict local and away victories, the final global accuray will be of almost 70%."
    ]
   },
   {
@@ -771,9 +820,9 @@
    "source": [
     "## 3. Conclusions and Future Steps\n",
     "\n",
+    "As we have seen, the model seems to work better when the date used us more concrete. So it would be a good idea to try to create new models with the bets for only one team, competition or country.\n",
     "\n",
-    "\n",
-    "."
+    "Finally, we can also try some other interesting kind of models like the associative ones. Maybe it would be a good idea to give a try to __A-Priori__ to try to find some associative rules (if they exist) between bets and results.\n"
    ]
   },
   {
@@ -802,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
