--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -673,22 +673,54 @@
    "metadata": {},
    "source": [
     "## 1. Solution Description & Diagram\n",
+    "A costumes has ordered us to develop a system to predict the result of football matches based on the quotas from the betting houses.\n",
     "\n",
+    "We have identified the website: http://www.football-data.co.uk/data.php with all the information we can need to develope the solution and that it's updated weekly.\n",
     "\n",
+    "The front-end will consist in a the page with to main options:\n",
     "\n",
+    "* Update information: Will download latest information from source web page and show to user result as number of matches by country and competition.\n",
     "\n",
-    "."
+    "* Get weekly prediction: User will select initial and final date of the analysis, by default current week. Solution will show a screen with 4 frames:\n",
+    "   * Betting houses realibility: Graphic with the reliability of bethouses included in dataset in all the seasons.\n",
+    "   * Top N greatest divergent matches: Description of the N matches with highest divergence in this week and his prediction\n",
+    "   * Top N lowes divergent matches: Description of the N matches with lowest divergence in this week and his prediction\n",
+    "   * Rest of the matches: List of the rest of the matches in the week.\n",
+    "   \n",
+    "* Get individual prediction: The user will select initial and final date and the match (country, competition and team). User will show all the information of the match, including prediction.\n",
+    "\n",
+    "The back-end of the solution will be developed with Spark tools: RDD, Pandas and DataFrames\n",
+    "\n",
+    "Data information will be in csv files.\n",
+    "\n",
+    "The process of calculation is:\n",
+    "\n",
+    "<img src=\"../Img/esquema.gif\">\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 2. Data Inputs\n",
+    "The original data has been obtained from the website: http://www.football-data.co.uk/data.php\n",
     "\n",
+    "This webpage offers a large dataset of information about football matches for up to 25 European league divisions and other international leagues. This information comes from 15 seasons back to 2003-20004 and include more than 500 football teams.\n",
     "\n",
+    "Original files also includes information related quotas calculated by different bets houses based on probability of win, draw or lost.\n",
     "\n",
-    "."
+    "Information is provided in csv files classified in folders by season, country and competition.\n",
+    "\n",
+    "This website provides to separate datasets: main competitions and extra competitions. We have only dealt with the main leagues.\n",
+    "\n",
+    "Our first process is responsible for downloading all this files and reorder in folders by country, competition and season, that it fits better to the subsequent treatment we will do.\n",
+    "\n",
+    "This process is developed in notebook '1_download-raw.ipynb'.\n",
+    "\n",
+    "The following graph shows the distribution of the downloaded data, grouped by country and competition. We can show de minimum and maximum session in every competition and the number of sessions. In fact every season it’s a separate file.\n",
+    "\n",
+    "<img src=\"../Img/original_data.gif\">\n"
    ]
   },
   {
@@ -697,9 +729,67 @@
    "source": [
     "## 3. Data Cleaning Steps\n",
     "\n",
+    "The task that has supposed more work is the validation and treatment of the **downloaded files**. Initially we have download all the files in both datasets (main and extra).\n",
     "\n",
+    "The first part of cleaning process was validate downloaded files. We have detected almost 40 files with erroneous format, because the weren’t correct csv files.. We have discarded this information.\n",
     "\n",
-    "."
+    "The next step was to identify the **common fields**. Since each combination of country, competition and season was a separate file, it could contain different fields. This has happened especially with the data of the betting houses. The cause of this situation is that each betting house operates in different countries and has had activity in different periods of time.\n",
+    "\n",
+    "This process was developed in '2_filesAnalysis-raw_to_correct.ipynb'\n",
+    "\n",
+    "We have reviewed the distribution of bookmakers by country and incorporated into our dataset houses with information in most countries. Finally we have included in our dataset 12 betting houses.\n",
+    "The following chart is an example of the analysis of the distribution of betting houses.\n",
+    "\n",
+    "<img src=\"../Img/bet_houses_distrib.gif\">\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After verification of files next step was **unifying** all files in a global dataset called 'main_competitions.csv'. \n",
+    "\n",
+    "As a part of this task we have selected want fields to include:\n",
+    "    * Classification files: Country, Competition and Season\n",
+    "    * Match information: Date, HomeTeam, AwayTeam, FTR (Full time result)\n",
+    "    * Betting houses quotas. Fields names ara composed by the betting house id and the type of quota id.\n",
+    "            * Betting houses ids are: B365,BS,BW,GB,IW,LB,SO,SB,SJ,SY,VC,WH\n",
+    "            * Quota types ids are: H (Home), D (Draw), A (Away)\n",
+    "\n",
+    "This proces was developed in notebook '3_filesUnifying-raw_to_correct.ipynb'\n",
+    "\n",
+    "We have also created a second dataset with matches from **seasons 2017-2018 and 2018-2019**, that will be used in the prediction model and it's called 'main_competitions_recent.csv'\n",
+    "\n",
+    "We have reavaluate the betting houses fields to identify if all of them were used. We detect and drop columns from 4 houses with nulls in all the records of this seasons. Finally this dataset contains 6 betting houses quotas.\n",
+    "\n",
+    "This process was developed in notebook '5_recent_seasons_subset.ipynb' \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next step was validate that **fields** of our dataset are **correct**. In this case all the fields have the correct type and format.\n",
+    "\n",
+    "This step was developed in '4_fieldsAnalysis-raw_to_correct.ipynb'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Last step of cleaning was validate **consitency of fields**. We made the following validations:\n",
+    "* Null values required: We validated nulls in required fields and deleted corresponding rows:\n",
+    "    * Date: 145 rows\n",
+    "    * HomeTeam and AwayTeam: 385 rows\n",
+    "    * FTR: 146 rows\n",
+    "* Null values bet houses: We reviewed nulls in betting houses quotas. We decide to drop columns of betting house with almost rows with nulls, in this case: SO and SY. We mantein the rest of the Betting Houses cols unles nulls because we will delete before every specific analisys.\n",
+    "* Unify team names: We have detected teams with different names and unifidied the names\n",
+    "\n",
+    "This proces was developed in '5_fieldsAnalysis-correct_to_consistent.ipynb'\n",
+    "\n",
+    "<img src=\"../Img/team_names.gif\">\n"
    ]
   },
   {
@@ -710,8 +800,19 @@
     "\n",
     "### 4.1 Divergence\n",
     "\n",
+    "To assess the different valuation that betting houses have given to a match we have created the measured 'divergence'.\n",
     "\n",
+    "We calculate the divergence as the maximum percentage of variation between quotas and them mean of quotas of the match. All this is made by every type of quota (H, D, A).\n",
     "\n",
+    "In first place we identify the betting houses and columns included in the dataset with function 'filterBetHouses'.\n",
+    "\n",
+    "Then we calculate the divergence of every individual match with function 'calcDivergence'.\n",
+    "\n",
+    "Bellow this we map this calculation for all the rows in the dataset.\n",
+    "\n",
+    "And finally we have implemented the function 'topNDivergence' to obtain the top N matches with highest divergence and the top N matches with de lowest divergence.\n",
+    "\n",
+    "This has been developed in notebook '7_divergence.ipynb'\n",
     "."
    ]
   },
@@ -788,7 +889,13 @@
    "source": [
     "## 1. Review Expected vs. Attained Outcomes\n",
     "\n",
-    "As we have explained, our goal was to obtain something like this: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%).\n",
+    "All our expected outcomes has been achieved.\n",
+    "\n",
+    "We have developed functions to calculated divergence of matches and identify top N divergent matches.\n",
+    "\n",
+    "We also have developed a proces to obtain the reliability of betting houses and we have calculated with main competitions dataset.\n",
+    "\n",
+    "As we have explained, our main goal was to obtain something like this: (__Home Wins__: 45%, __Draw__ : 25%, __Away Wins__ : 30%).\n",
     "\n",
     "We know that a model based in __Naive Bayes__ offers this kind of output, but, we have not be able to achieve it yet.\n",
     "\n",
@@ -851,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
